--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "git": "^0.1.5",
+    "gsap": "^3.13.0",
     "hono": "4.8.2",
     "isbot": "5.1.26",
     "react": "19.0.0",
@@ -28,7 +29,8 @@
     "@cloudflare/vite-plugin": "1.7.5",
     "@react-router/dev": "7.6.3",
     "@tailwindcss/vite": "4.1.4",
-    "@types/node": "24.0.4",
+    "@types/gsap": "^1.20.2",
+    "@types/node": "^24.0.4",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
     "tailwindcss": "4.1.1",
