--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "publish": true
   },
   "dependencies": {
+    "framer-motion": "^12.23.24",
     "git": "^0.1.5",
     "gsap": "^3.13.0",
     "hono": "4.8.2",
     "isbot": "5.1.26",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-router": "7.6.3"
+    "react-router": "7.6.3",
+    "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "1.7.5",
