--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "publish": true
   },
   "dependencies": {
+    "@react-router/node": "^7.9.4",
     "@remix-run/node": "^2.17.1",
+    "@stripe/react-stripe-js": "^5.2.0",
+    "@stripe/stripe-js": "^8.1.0",
     "git": "^0.1.5",
     "gsap": "^3.13.0",
     "hono": "4.8.2",
@@ -27,7 +30,8 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-router": "^7.9.4",
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4",
+    "stripe": "^19.1.0"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "1.7.5",
